<resources>

    <string name="hint_def">Write a message…</string>
    <string name="cancel">Cancel</string>
    <string name="send">Send</string>


    <string name="report_cap">Report ⛔</string>

    <string name="report_part_1">El capitulo</string>
    <string name="report_part_2">tiene problemas</string>
    <string name="errorLoad">An error has occurred</string>
    <string name="error_connect">We are in maintenance</string>
    <string name="success_connect">Successful connection</string>
    <string name="success_code">Correct code!</string>
    <string name="social_networks_info">Join our social networks</string>

    <string name="select_playerg">Select player</string>
    <string name="info_playerg">All our content is supported by other applications, so we invite you to install some of the following players so you can enjoy our app</string>
    <string name="player_gog">Play</string>
    <string name="please_waitg">Please wait...</string>

    <string name="m3u_empty">Report this chapter or channel to our technical support team, to review it with the report button displayed</string>
    <string name="out_memory">Your cell phone has little available memory :(</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_change">Change channel</string>
    <string name="dontwant">Cancel</string>
    <string name="confirm">Yes, i want</string>
    <string name="doyouwant">Do you want chat with this person</string>
    <string name="got_it">Got it</string>
    <string name="emoji_info">New emoji button :)</string>
    <string name="change_info">New change channel button to navigate anothers chats</string>
    <string name="chat_info">Now you can share with our community your ideas, movies and favorite series, remember to respect everyone makes us a better community</string>
    <string name="username">Username</string>
    <string name="go_home">Join</string>
    <string name="_default_options">Message options</string>
    <string name="chat_with">Chat with %s</string>
    <string name="ban_user">Block %s</string>


</resources>
