<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@drawable/bg_r_d"
    android:padding="10dp"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/_default_options"
            android:textStyle="bold"
            android:layout_weight="1"
            android:textSize="16sp"
            android:textColor="@color/blue_fb"
            android:textAlignment="textStart"
            android:padding="5dp"
            />

        <ImageView
            android:id="@+id/close_btn"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:padding="5dp"
            app:srcCompat="@drawable/close_ica"
            app:tint="#2e2e2e" />
    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_marginTop="5dp"
        android:layout_height="0.5dp"
        android:background="#95000000"
        />

    <TextView
        android:id="@+id/chat_with"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:text="@string/chat_with"
        android:textAlignment="textStart"
        android:textColor="#2e2e2e"
        android:textSize="14sp"
        android:textStyle="normal" />


    <TextView
        android:id="@+id/ban_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:padding="5dp"
        android:text="@string/ban_user"
        android:textAlignment="textStart"
        android:textColor="#2e2e2e"
        android:textSize="14sp"
        android:layout_marginBottom="15dp"
        android:textStyle="normal" />

</LinearLayout>